--- a/Web/locales/en.json
+++ b/Web/locales/en.json
@@ -398,5 +398,201 @@
       "requirement_lowercase": "A lowercase letter",
       "requirement_number": "A number",
       "requirement_special": "A special character ({special})"
+    },
+    "pages": {
+        "index": {
+            "title": "Courses",
+            "no_courses_line1": "YOU HAVE",
+            "no_courses_line2": "NO COURSES"
+        },
+        "curso": {
+            "breadcrumbs_home": "Home",
+            "breadcrumbs_course_default": "Course",
+            "error_loading_course": "An error occurred while loading the course.",
+            "error_validating_access": "An error occurred while validating course access.",
+            "toast_edit_error_title": "Error while editing",
+            "toast_email_not_exist": "The email does not exist",
+            "search_placeholder_group": "Search Group...",
+            "search_placeholder_teacher": "Search Teacher...",
+            "no_groups_warning_line1": "THERE ARE",
+            "no_groups_warning_line2": "NO GROUPS",
+            "group_card_assigned_teacher": "Assigned Teacher",
+            "rubric_preview_modify": "Modify",
+            "rubric_preview_view": "View",
+            "rubric_preview_see_more": "See more",
+            "no_rubrics_warning_line1": "THERE ARE",
+            "no_rubrics_warning_line2": "NO RUBRICS",
+            "loading_rubrics": "Loading rubrics...",
+            "all_rubrics_modal_title": "All Rubrics",
+            "view_details": "View details"
+        },
+        "grupo": {
+            "breadcrumbs_home": "Home",
+            "breadcrumbs_course_default": "Course",
+            "breadcrumbs_group_default": "Group",
+            "error_loading_course": "An error occurred while loading the course.",
+            "error_validating_access": "An error occurred while validating group access.",
+            "error_loading_group": "An error occurred while loading the group.",
+            "search_placeholder_student": "Search Student...",
+            "grades_button": "Grades",
+            "rubric_preview_modify": "Modify",
+            "rubric_preview_see_more": "See more",
+            "no_rubrics_warning_line1": "THERE ARE",
+            "no_rubrics_warning_line2": "NO RUBRICS",
+            "loading_rubrics": "Loading rubrics...",
+            "all_rubrics_modal_title": "All Rubrics",
+            "view_details": "View details"
+        },
+        "calificaciones": {
+            "access_denied": "Access Denied",
+            "access_denied_message": "Only the group teacher can access the grades.",
+            "error_loading_course": "An error occurred while loading the course.",
+            "error_validating_access": "An error occurred while validating access to the group.",
+            "error_loading_group": "Error loading group",
+            "breadcrumbs_home": "Home",
+            "breadcrumbs_course_default": "Course",
+            "breadcrumbs_group_default": "Group",
+            "breadcrumbs_grades": "Grades",
+            "loading_preparing_grades": "Preparing Grades...",
+            "error_missing_data": "Missing required data for grading",
+            "error_preparing_grade_title": "Error preparing grade",
+            "error_preparing_grade_desc": "Could not access the grading page",
+            "error_loading_rubrics": "Error loading rubrics",
+            "loading_deleting_nota": "Deleting grade...",
+            "toast_delete_success": "Grade deleted successfully",
+            "toast_delete_error": "Error deleting grade",
+            "toast_percentage_updated": "Percentage updated",
+            "toast_percentage_update_error": "Error trying to update percentage",
+            "title_group_grades": "Group Grades",
+            "toast_generic_error_title": "Error",
+            "nota_number": "Grade {number}",
+            "rubric_label": "Rubric: {name}",
+            "empty_state_no_grades_title": "NO GRADES",
+            "empty_state_no_grades_desc": "Create a new grade to start grading students.",
+            "loading_grades": "Loading Grades",
+            "title_students": "Students",
+            "empty_state_no_students_title": "NO STUDENTS",
+            "empty_state_no_students_desc": "Add students to the group to be able to grade them.",
+            "modal_grade_title": "Grade Notas - {name}",
+            "button_grade": "Grade",
+            "modal_no_grades_registered": "No grades registered",
+            "modal_create_grade_to_start": "Create a grade to be able to grade",
+            "modal_confirm_delete_title": "Confirm Deletion",
+            "modal_confirm_delete_desc": "Are you sure you want to delete 'Grade {number}'? This action is irreversible.",
+            "button_cancel": "Cancel",
+            "button_delete": "Delete",
+            "modal_rubric_deleted_title": "Rubric Deleted",
+            "modal_rubric_deleted_desc": "The rubric associated with this grade has been deleted. It is not possible to view its content.",
+            "button_close": "Close"
+        },
+        "rubricas": {
+            "create_rubric": "Create Rubric",
+            "clone_rubric": "Clone Rubric",
+            "state_draft": "Draft",
+            "state_active": "Active",
+            "state_inactive": "Inactive",
+            "not_assigned_course": "Not assigned to any course",
+            "not_assigned_group": "Not assigned to any group",
+            "filter_all_states": "All states",
+            "filter_active": "Active",
+            "filter_drafts": "Drafts",
+            "filter_inactive": "Inactive",
+            "my_rubrics_title": "My Rubrics",
+            "search_placeholder": "Search Rubric...",
+            "no_results_found_line1": "NO RUBRICS",
+            "no_results_found_line2": "FOUND",
+            "empty_state_line1": "THERE ARE",
+            "empty_state_line2": "NO RUBRICS",
+            "toast_delete_success": "Rubric deleted successfully",
+            "toast_delete_error": "Error deleting rubric",
+            "details_modal_title": "Rubric Details:",
+            "details_modal_state": "State:",
+            "details_modal_course": "Course it belongs to:",
+            "details_modal_group": "Group it belongs to:",
+            "button_close": "Close",
+            "button_view_rubric": "View Rubric",
+            "delete_modal_title": "Confirm Deletion",
+            "delete_modal_desc": "Are you sure you want to delete the rubric \"{name}\"? This action is irreversible.",
+            "button_cancel": "Cancel",
+            "button_delete": "Delete",
+            "finish_rubric_modal_title": "Clone Rubric",
+            "select_course_title": "Select Course",
+            "clone_last_guide_rubric": "It will clone the last guide rubric",
+            "button_clone": "Clone"
+        }
+    },
+    "crear_rubrica": {
+      "back": "Back",
+      "tema": "Topic",
+      "criterio": "Criterion",
+      "peso": "Weight",
+      "calificacion": "Grade",
+      "acumulado": "Accumulated",
+      "observaciones": "Observations",
+      "no_temas": "No topics.",
+      "total": "Total",
+      "add_tema": "Add Topic",
+      "save": "Save",
+      "assign_rubric": "Assign Rubric",
+      "finish_rubric": "Finish Rubric",
+      "rubric_name_label": "Rubric Name",
+      "rubric_name_placeholder": "Enter the rubric name",
+      "select_course": "Select Course",
+      "no_groups": "No groups available for this course.",
+      "or": "Or",
+      "make_guide_rubric": "Make course guide rubric",
+      "cancel": "Cancel",
+      "finish": "Finish",
+      "save_draft": "Save Draft",
+      "toast_save_success": "Rubric saved successfully",
+      "toast_save_error": "Error saving rubric",
+      "toast_select_group_or_guide": "You must select at least one group or mark as guide rubric",
+      "toast_total_weight_error": "Total weight cannot exceed 5",
+      "rubric_name_required": "A name is required"
+    },
+    "calificar_rubrica": {
+      "back": "Back",
+      "student_label": "Student:",
+      "tema": "Topic",
+      "criterio": "Criterion",
+      "peso": "Weight",
+      "calificacion": "Grade",
+      "acumulado": "Accumulated",
+      "observaciones": "Observations",
+      "total": "Total",
+      "no_temas": "No topics.",
+      "save_grade": "Save Grade",
+      "saving_grade": "Saving grade...",
+      "toast_save_success": "Grade saved successfully",
+      "toast_save_error": "Error saving grade",
+      "parameters_missing": "Missing parameters",
+      "missing_parameters_to_load_rubric": "Missing parameters required to load the rubric.",
+      "error": "Error",
+      "error_loading_rubric": "An error occurred while loading the rubric."
+    },
+    "rubrica_index": {
+      "back": "Back",
+      "tema": "Topic",
+      "criterio": "Criterion",
+      "peso": "Weight",
+      "calificacion": "Grade",
+      "acumulado": "Accumulated",
+      "observaciones": "Observations",
+      "no_temas": "No topics.",
+      "total": "Total",
+      "add_tema": "Add Topic",
+      "save": "Save",
+      "assign_rubric": "Assign Rubric",
+      "select_course": "Select Course",
+      "no_groups": "No groups available for this course.",
+      "or": "Or",
+      "make_guide_rubric": "Make course guide rubric",
+      "cancel": "Cancel",
+      "assign": "Assign",
+      "total_cannot_exceed_5": "Total weight cannot exceed 5",
+      "changes_saved_successfully": "Changes saved successfully",
+      "error_saving_changes": "Error saving changes",
+      "must_select_at_least_one_group_or_mark_as_guide_rubric": "You must select at least one group or mark as guide rubric",
+      "error_assigning_rubric": "Error assigning rubric"
     }
 }
