--- a/Web/locales/es.json
+++ b/Web/locales/es.json
@@ -398,5 +398,201 @@
       "requirement_lowercase": "Una letra minúscula",
       "requirement_number": "Un número",
       "requirement_special": "Un carácter especial ({special})"
+    },
+    "pages": {
+        "index": {
+            "title": "Cursos",
+            "no_courses_line1": "NO TIENES",
+            "no_courses_line2": "NINGÚN CURSO"
+        },
+        "curso": {
+            "breadcrumbs_home": "Inicio",
+            "breadcrumbs_course_default": "Curso",
+            "error_loading_course": "Ha ocurrido un error al cargar el curso.",
+            "error_validating_access": "Ha ocurrido un error al validar el acceso al curso.",
+            "toast_edit_error_title": "Error al editar",
+            "toast_email_not_exist": "El correo no existe",
+            "search_placeholder_group": "Buscar Grupo...",
+            "search_placeholder_teacher": "Buscar Docente...",
+            "no_groups_warning_line1": "NO HAY",
+            "no_groups_warning_line2": "NINGÚN GRUPO",
+            "group_card_assigned_teacher": "Profesor encargado",
+            "rubric_preview_modify": "Modificar",
+            "rubric_preview_view": "Ver",
+            "rubric_preview_see_more": "Ver más",
+            "no_rubrics_warning_line1": "NO HAY",
+            "no_rubrics_warning_line2": "NINGUNA RÚBRICA",
+            "loading_rubrics": "Cargando rúbricas...",
+            "all_rubrics_modal_title": "Todas las Rúbricas",
+            "view_details": "Ver detalles"
+        },
+        "grupo": {
+            "breadcrumbs_home": "Inicio",
+            "breadcrumbs_course_default": "Curso",
+            "breadcrumbs_group_default": "Grupo",
+            "error_loading_course": "Ha ocurrido un error al cargar el curso.",
+            "error_validating_access": "Ha ocurrido un error al validar el acceso al grupo.",
+            "error_loading_group": "Ha ocurrido un error al cargar el grupo.",
+            "search_placeholder_student": "Buscar Estudiante...",
+            "grades_button": "Calificaciones",
+            "rubric_preview_modify": "Modificar",
+            "rubric_preview_see_more": "Ver más",
+            "no_rubrics_warning_line1": "NO HAY",
+            "no_rubrics_warning_line2": "NINGUNA RÚBRICA",
+            "loading_rubrics": "Cargando rúbricas...",
+            "all_rubrics_modal_title": "Todas las Rúbricas",
+            "view_details": "Ver detalles"
+        },
+        "calificaciones": {
+            "access_denied": "Acceso denegado",
+            "access_denied_message": "Solo el profesor del grupo puede acceder a las calificaciones.",
+            "error_loading_course": "Ha ocurrido un error al cargar el curso.",
+            "error_validating_access": "Ha ocurrido un error al validar el acceso al grupo.",
+            "error_loading_group": "Error al cargar el grupo",
+            "breadcrumbs_home": "Inicio",
+            "breadcrumbs_course_default": "Curso",
+            "breadcrumbs_group_default": "Grupo",
+            "breadcrumbs_grades": "Calificaciones",
+            "loading_preparing_grades": "Preparando Notas...",
+            "error_missing_data": "Faltan datos necesarios para calificar",
+            "error_preparing_grade_title": "Error al preparar la calificación",
+            "error_preparing_grade_desc": "No se pudo acceder a la página de calificación",
+            "error_loading_rubrics": "Error al cargar las rúbricas",
+            "loading_deleting_nota": "Eliminando nota...",
+            "toast_delete_success": "Nota eliminada exitosamente",
+            "toast_delete_error": "Error al eliminar la nota",
+            "toast_percentage_updated": "Porcentaje actualizado",
+            "toast_percentage_update_error": "Error al intentar actualizar el porcentaje",
+            "title_group_grades": "Notas del Grupo",
+            "toast_generic_error_title": "Error",
+            "nota_number": "Nota {number}",
+            "rubric_label": "Rúbrica: {name}",
+            "empty_state_no_grades_title": "NO HAY NOTAS",
+            "empty_state_no_grades_desc": "Crea una nueva nota para comenzar a calificar a los estudiantes.",
+            "loading_grades": "Cargando Notas",
+            "title_students": "Estudiantes",
+            "empty_state_no_students_title": "NO HAY ESTUDIANTES",
+            "empty_state_no_students_desc": "Agrega estudiantes al grupo para poder calificarlos.",
+            "modal_grade_title": "Calificar Notas - {name}",
+            "button_grade": "Calificar",
+            "modal_no_grades_registered": "No hay notas registradas",
+            "modal_create_grade_to_start": "Crea una nota para poder calificar",
+            "modal_confirm_delete_title": "Confirmar Eliminación",
+            "modal_confirm_delete_desc": "¿Estás seguro que deseas eliminar la \"Nota {number}\"? Esta acción es irreversible.",
+            "button_cancel": "Cancelar",
+            "button_delete": "Eliminar",
+            "modal_rubric_deleted_title": "Rúbrica Eliminada",
+            "modal_rubric_deleted_desc": "La rúbrica asociada a esta nota ha sido eliminada. No es posible ver su contenido.",
+            "button_close": "Cerrar"
+        },
+        "rubricas": {
+            "create_rubric": "Crear Rúbrica",
+            "clone_rubric": "Clonar Rúbrica",
+            "state_draft": "Borrador",
+            "state_active": "Activa",
+            "state_inactive": "Desactivada",
+            "not_assigned_course": "No asignado a ningún curso",
+            "not_assigned_group": "No asignado a ningún grupo",
+            "filter_all_states": "Todos los estados",
+            "filter_active": "Activas",
+            "filter_drafts": "Borradores",
+            "filter_inactive": "Inactivas",
+            "my_rubrics_title": "Mis Rúbricas",
+            "search_placeholder": "Buscar Rúbrica...",
+            "no_results_found_line1": "NO SE ENCONTRARON",
+            "no_results_found_line2": "RÚBRICAS",
+            "empty_state_line1": "NO HAY",
+            "empty_state_line2": "NINGUNA RÚBRICA",
+            "toast_delete_success": "Rúbrica eliminada exitosamente",
+            "toast_delete_error": "Error al eliminar la rúbrica",
+            "details_modal_title": "Detalles Rúbrica:",
+            "details_modal_state": "Estado:",
+            "details_modal_course": "Curso al que pertenece:",
+            "details_modal_group": "Grupo al que pertenece:",
+            "button_close": "Cerrar",
+            "button_view_rubric": "Ver Rúbrica",
+            "delete_modal_title": "Confirmar Eliminación",
+            "delete_modal_desc": "¿Estás seguro que deseas eliminar la rúbrica \"{name}\"? Esta acción es irreversible.",
+            "button_cancel": "Cancelar",
+            "button_delete": "Eliminar",
+            "finish_rubric_modal_title": "Clonar Rúbrica",
+            "select_course_title": "Seleccionar Curso",
+            "clone_last_guide_rubric": "Clonará la última rúbrica guía",
+            "button_clone": "Clonar"
+        }
+    },
+    "crear_rubrica": {
+      "back": "Volver",
+      "tema": "Tema",
+      "criterio": "Criterio",
+      "peso": "Peso",
+      "calificacion": "Calificación",
+      "acumulado": "Acumulado",
+      "observaciones": "Observaciones",
+      "no_temas": "No hay temas.",
+      "total": "Total",
+      "add_tema": "Agregar Tema",
+      "save": "Guardar",
+      "assign_rubric": "Asignar Rúbrica",
+      "finish_rubric": "Finalizar Rúbrica",
+      "rubric_name_label": "Nombre de la Rúbrica",
+      "rubric_name_placeholder": "Ingrese el nombre de la rúbrica",
+      "select_course": "Seleccionar Curso",
+      "no_groups": "No hay grupos disponibles para este curso.",
+      "or": "O",
+      "make_guide_rubric": "Hacer rúbrica guía del curso",
+      "cancel": "Cancelar",
+      "finish": "Finalizar",
+      "save_draft": "Guardar Borrador",
+      "toast_save_success": "Rúbrica guardada exitosamente",
+      "toast_save_error": "Error al guardar la rúbrica",
+      "toast_select_group_or_guide": "Debe seleccionar al menos un grupo o marcar como rúbrica guía",
+      "toast_total_weight_error": "El peso total no puede exceder 5",
+      "rubric_name_required": "Se requiere un nombre"
+    },
+    "calificar_rubrica": {
+      "back": "Volver",
+      "student_label": "Estudiante:",
+      "tema": "Tema",
+      "criterio": "Criterio",
+      "peso": "Peso",
+      "calificacion": "Calificación",
+      "acumulado": "Acumulado",
+      "observaciones": "Observaciones",
+      "total": "Total",
+      "no_temas": "No hay temas.",
+      "save_grade": "Guardar Calificación",
+      "saving_grade": "Guardando calificación...",
+      "toast_save_success": "Calificación guardada exitosamente",
+      "toast_save_error": "Error al guardar la calificación",
+      "parameters_missing": "Parámetros faltantes",
+      "missing_parameters_to_load_rubric": "Faltan parámetros necesarios para cargar la rúbrica.",
+      "error": "Error",
+      "error_loading_rubric": "Ha ocurrido un error al cargar la rúbrica."
+    },
+    "rubrica_index": {
+      "back": "Volver",
+      "tema": "Tema",
+      "criterio": "Criterio",
+      "peso": "Peso",
+      "calificacion": "Calificación",
+      "acumulado": "Acumulado",
+      "observaciones": "Observaciones",
+      "no_temas": "No hay temas.",
+      "total": "Total",
+      "add_tema": "Agregar Tema",
+      "save": "Guardar",
+      "assign_rubric": "Asignar Rúbrica",
+      "select_course": "Seleccionar Curso",
+      "no_groups": "No hay grupos disponibles para este curso.",
+      "or": "O",
+      "make_guide_rubric": "Hacer rúbrica guía del curso",
+      "cancel": "Cancelar",
+      "assign": "Asignar",
+      "total_cannot_exceed_5": "El peso total no puede exceder 5",
+      "changes_saved_successfully": "Cambios guardados exitosamente",
+      "error_saving_changes": "Error al guardar los cambios",
+      "must_select_at_least_one_group_or_mark_as_guide_rubric": "Debe seleccionar al menos un grupo o marcar como rúbrica guía",
+      "error_assigning_rubric": "Error al asignar la rúbrica"
     }
 }
